--- a/Project.org
+++ b/Project.org
@@ -533,12 +533,42 @@ employed by their competitors. To prevent this, the company must start
 building a profile on each of its competitors and how they are going
 to respond to each of their actions.
 * Key Success Factors
-** Industry analysis
-*** Find out what the bigger players are doing right
-** Internal strategies
-*** What is the current strategy employed by the company?
-** Customer views
-*** What do the customers really want?
+  - Durable products (rust free). Customers now prefer the rust free
+    roofing to the older ones. All the main competitors are now
+    advertising the aluzinc content of their product. This fits with
+    current marketing trends where the customers now prefer to buy
+    more durable sheets, which would not need frequent replacement,
+    even if it comes at a higher cost.
+  - Number of retail outlets (accessibility). This is a very important
+    issue because customers need to be
+    able to access the products easily. It can be frustrating for
+    customers who are willing to buy the products of the company not
+    to find them in the market. Even the main competitor,
+    Raincoat, has a retail outlet in every region of the country. In
+    order to succeed with the plan, it is necessary to do the same or
+    even better, have a retail outlet at each area where there is a
+    new neighbourhood springing up.
+  - Varied products to suite the taste and preferences of each
+    customer. Construction projects are usually highly customized to
+    meet the needs of the developer. It is therefore necessary to
+    provide all products in many varied forms and also be ready to
+    offer customized products to meet every peculiar customer's
+    needs.
+  - Convenience. DBS has a website where all vital information about a
+    products can be found. Orders can also be made through the
+    website. DBS also had a delivery system where products are
+    delivered to customers
+  - Tailor made designs. Products are made to the specification of the
+    customers
+  - Financial sustainability. The ability of DBS to fund
+    most of its operations and survive in the long term. This is
+    current achieved using funds provided by its shareholders.
+    The bankers of DBS to provide loans and overdrafts as
+    and when they need them.
+  - The success leans on the core values -- Quality, Affordability,
+    Excellence and Speed. There is therefore a need to train and
+    educate all the employees of the organisation on these core values
+    so that they are inculcated into all operations of the business.
 * Market Definition
 ** Segmentation
 ** Targeting
